Update button placement, fix alignment issues

--- a/src/platform/site-wide/sass/merger.scss
+++ b/src/platform/site-wide/sass/merger.scss
@@ -215,10 +215,6 @@
     }
   }
 
-  #homepage-popular {
-    padding-top: 3em;
-  }
-
   #homepage-hero {
     background-color: $color-primary-darker;
     text-align: center;
@@ -244,94 +240,6 @@
   h3, h4 {
     .fa {
       padding-right: .35em;
-    }
-  }
-
-  // new pattern, but specific to homepage only
-  .homepage-button {
-
-    width:100%;
-    height: 85px;
-    padding: 0;
-
-    a {
-      width: 100%;
-      height: 100%;
-      font-weight: bold;
-      color: white;
-      text-decoration: none;
-    }
-
-    .icon-wrapper {
-      width: 55px;
-      height: 100%;
-      float: left;
-
-      -webkit-border-top-left-radius: 6px;
-      -webkit-border-bottom-left-radius: 6px;
-      -moz-border-radius-topleft: 6px;
-      -moz-border-radius-bottomleft: 6px;
-      border-top-left-radius: 6px;
-      border-bottom-left-radius: 6px;
-    }
-
-    .button-inner {
-      padding-left: 1em;
-      padding-right: 1em;
-
-      &#vcl {
-        padding-left: .5em;
-        padding-right: .5em;
-      }
-    }
-
-    .fa {
-      font-size: 1.5em;
-      display:inline-block;
-
-      &.fa-user-circle {
-        font-size: 1.5em;
-        padding-right: .3em;
-      }
-
-      &::before {
-        position: absolute;
-        margin: 0;
-        top: 15px;
-        left: -7.75px;
-      }
-    }
-
-    .vcl {
-      content: "";
-      background: url(/img/vcl-logo-white.png) no-repeat;
-      background-size: 100%;
-      display: inline-block;
-      width: 2em;
-      height: 2em;
-      margin-top:32.5px;
-    }
-
-    div {
-      display:inline-block;
-      width:80%;
-    }
-
-    &.primary-darker {
-
-      .icon-wrapper {
-        background-color: $color-primary-darker;
-      }
-
-      background-color: $color-primary;
-    }
-
-    &.secondary-dark {
-
-      .icon-wrapper {
-        background-color: $color-secondary-darkest;
-      }
-      background-color: $color-secondary-dark;
     }
   }
 
@@ -655,18 +563,12 @@
     .va-h-ruled--stars,
     .va-nav-breadcrumbs,
     article,
-    #homepage-popular,
     #hub-rail,
     .footer-banner,
     .footer-links {
 
       padding-left: .5em;
       padding-right: .5em;
-    }
-
-    #homepage-popular {
-      padding-bottom: 1.5em;
-      padding-top: 1em;
     }
 
     .va-nav-breadcrumbs  {
@@ -832,35 +734,11 @@
       }
     }
 
-    #homepage-popular {
-
-      text-align: center;
-
-      .usa-width-one-third {
-
-        margin: 0 auto;
-        margin-bottom: 1.5em;
-        float: none;
-        display: block;
-        width: 50%;
-
-        &:last-child {
-          margin-bottom: 0;
-        }
-
-        #vcl {
-          padding-left: 1.5em;
-          padding-right: 1.5em;
-        }
-      }
-    }
-
     #homepage-benefits,
     #homepage-news,
     .va-h-ruled--stars,
     .va-nav-breadcrumbs,
     article,
-    #homepage-popular,
     #hub-rail {
       padding-left: 1em;
       padding-right: 1em;
@@ -893,32 +771,6 @@
         padding-right: 1em;
       }
     }
-
-    #homepage-popular {
-
-      text-align: center;
-
-      .usa-width-one-third {
-
-        margin: 0 auto;
-        margin-bottom: 1.5em;
-        float: none;
-        display: block;
-        width: 40%;
-
-        &:last-child {
-          margin-bottom: 0;
-        }
-
-        #vcl {
-          padding-left: 1.5em;
-          padding-right: 1.5em;
-        }
-
-      }
-
-    }
-
   }
 
   #preview-site-alert {
